Add more styling to the site, about page, images

--- a/CoffeAndWifiUi/src/Style/_variables.scss
+++ b/CoffeAndWifiUi/src/Style/_variables.scss
@@ -4,6 +4,8 @@ $text-color: #fff;
 $accent-color: #c0a080;
 $accent-dark-color: #8c704e;
 $link-color: #b87333;
+$logo-color: rgb(251, 217, 116);
 $primary-font: "Neuton", serif;
 $secondary-font: "Bebas Neue", sans-serif;
 $tercier-font: "Open Sans", sans-serif;
+$brand-font: "Dancing Script", cursive;
