--- a/CoffeAndWifiUi/src/components/Section/Navbar/Navbar.scss
+++ b/CoffeAndWifiUi/src/components/Section/Navbar/Navbar.scss
@@ -14,9 +14,18 @@ a.navbar-brand:hover {
 }
 
 .nav-item .nav-link:hover {
-  color: $accent-color;
+  color: $logo-color
 }
 
 .logo-img {
-  width: 6dvw;
+  width: 8rem;
+}
+
+.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+button.navbar-toggler {
+  color: $text-color;
+  border-color: $text-color;
 }
