create cafes page, sample data, create cafe object structure

--- a/CoffeAndWifiUi/src/Style/_variables.scss
+++ b/CoffeAndWifiUi/src/Style/_variables.scss
@@ -1,5 +1,7 @@
 $primary-bg-color: #2c2018;
+$primary-bg-color-transparent: rgba(44, 32, 24, 0.8);
 $secondary-bg-color: #4c3830;
+$secondary-bg-color-transparent: rgba(76, 56, 48, 0.8);
 $text-color: #fff;
 $accent-color: #c0a080;
 $accent-dark-color: #8c704e;
