--- a/CoffeAndWifiUi/src/components/Pages/About/About.scss
+++ b/CoffeAndWifiUi/src/components/Pages/About/About.scss
@@ -1,7 +1,5 @@
-@import "../../../Style/variables";
-
-.home-container {
-    background-image: url("../../../assets/images/bg.jpg");
+.about-container {
+    background-image: url("../../../assets/images/about-bg.jpg");
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -12,11 +10,7 @@
     background-size: cover;
 }
 
-.home-content {
-    flex: 1;
-}
 
-.brand-name {
-    font-family: $brand-font;
-    color: $logo-color;
+.about-content {
+    flex: 1;
 }
