--- a/CoffeAndWifiUi/src/components/Section/Footer/Footer.scss
+++ b/CoffeAndWifiUi/src/components/Section/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../../Style/variables";
 
 footer {
-    background-color: $secondary-bg-color;
+    background-color: $secondary-bg-color-transparent;
     color: $text-color;
     padding: 10px;
     text-align: center;
