--- a/CoffeAndWifiUi/src/components/Section/Navbar/Navbar.scss
+++ b/CoffeAndWifiUi/src/components/Section/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 @import "../../../Style/variables";
 
 .navbar-container {
-  background-color: $secondary-bg-color;
+  background-color: $secondary-bg-color-transparent;
 }
 
 .nav-item .nav-link,
