add delete method, button for the cafes frontend and for the backend

--- a/CoffeAndWifiUi/src/Style/_variables.scss
+++ b/CoffeAndWifiUi/src/Style/_variables.scss
@@ -6,7 +6,10 @@ $text-color: #fff;
 $accent-color: #c0a080;
 $accent-dark-color: #8c704e;
 $link-color: #b87333;
-$success-color: rgb(13, 82, 13);
+$success-color: rgb(6, 43, 6);
+$success-secondary-color: rgb(13, 82, 13);
+$danger-color: rgb(43, 6, 6);
+$danger-secondary-color: rgb(82, 13, 13);
 $logo-color: rgb(251, 217, 116);
 $primary-font: "Neuton", serif;
 $secondary-font: "Bebas Neue", sans-serif;
