--- a/CoffeAndWifiUi/src/components/Buttons/Secondary/SecondaryButton.scss
+++ b/CoffeAndWifiUi/src/components/Buttons/Secondary/SecondaryButton.scss
@@ -1,17 +1,26 @@
 @import "../../../Style/variables";
 
 .secondary-button {
-    background-color: $secondary-bg-color;
-    border: none;
-    width: max-content;
-    padding: 0 2dvw;
-    font-weight: 600;
-    text-wrap: nowrap;
-    border-radius: 10px;
-    color: $text-color;
-  }
-  
-  .secondary-button:hover {
-    background-color: $accent-color;
-    color: $primary-bg-color;
-  }
+  background-color: $secondary-bg-color;
+  border: none;
+  width: max-content;
+  padding: 0 2dvw;
+  font-weight: 600;
+  text-wrap: nowrap;
+  border-radius: 10px;
+  color: $text-color;
+}
+
+.secondary-button.bg-none {
+  background-color: transparent;
+}
+
+.secondary-button:hover {
+  background-color: $accent-color;
+  color: $primary-bg-color;
+}
+
+.secondary-button.bg-none:hover {
+  background-color: transparent;
+  color: $accent-color;
+}
